--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=Atkinson+Hyperlegible:wght@400;700&family=Orbitron:wght@400;700;900&family=Exo+2:wght@400;700;900&family=Russo+One&display=swap"
       rel="stylesheet"
     />
     <meta name="theme-color" content="#000000" />
